--- a/register.html
+++ b/register.html
@@ -547,7 +547,7 @@
     // --- Konfigurasi Firebase (Untuk Login dan Database) ---
     const firebaseConfig = {
         apiKey: "AIzaSyCWl2CJqIr-u8lSHu8s4tgZ25UQIK2ivt0",
-        authDomain: "mayfa-fa284.firebaseapp.com",
+        authDomain: "auth.xlord.web.id",
         databaseURL: "https://mayfa-fa284-default-rtdb.asia-southeast1.firebasedatabase.app",
         projectId: "mayfa-fa284",
         storageBucket: "mayfa-fa284.appspot.com",
